fixed #4 now the max value reference is calculated based on the max per type from the model description file